--- a/.github/workflows/gitaction.yml
+++ b/.github/workflows/gitaction.yml
@@ -16,7 +16,7 @@ jobs:
            curl -L \
              -X POST \
            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer <YOUR-TOKEN>"\
+            -H "Authorization: Bearer $secrets.GITHUB_TOKEN"\
             https://api.github.com/repos/SiyaaJhawar/demo
     
       
